unit-2 c-programming/lec 04 c array & strings/strings/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for ex2
09:13:29 **** Incremental Build of configuration Debug for project ex2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex2.o" "..\\src\\ex2.c" 
..\src\ex2.c: In function 'main':
..\src\ex2.c:12:20: error: expected expression before '!=' token
   12 |         while(s[i])!=0){
      |                    ^~
..\src\ex2.c:12:9: warning: this 'while' clause does not guard... [-Wmisleading-indentation]
   12 |         while(s[i])!=0){
      |         ^~~~~
..\src\ex2.c:12:23: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'while'
   12 |         while(s[i])!=0){
      |                       ^
..\src\ex2.c:12:23: error: expected statement before ')' token
..\src\ex2.c:6:13: warning: unused variable 'strlen' [-Wunused-variable]
    6 |         int strlen;
      |             ^~~~~~
09:14:11 **** Incremental Build of configuration Debug for project ex2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex2.o" "..\\src\\ex2.c" 
..\src\ex2.c: In function 'main':
..\src\ex2.c:12:20: error: expected expression before '!=' token
   12 |         while(s[i])!=0){
      |                    ^~
..\src\ex2.c:12:9: warning: this 'while' clause does not guard... [-Wmisleading-indentation]
   12 |         while(s[i])!=0){
      |         ^~~~~
..\src\ex2.c:12:23: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'while'
   12 |         while(s[i])!=0){
      |                       ^
..\src\ex2.c:12:23: error: expected statement before ')' token
..\src\ex2.c:6:13: warning: unused variable 'slen' [-Wunused-variable]
    6 |         int slen;
      |             ^~~~
09:15:05 **** Incremental Build of configuration Debug for project ex2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex2.o" "..\\src\\ex2.c" 
gcc -o ex2.exe "src\\ex2.o" 
09:19:22 **** Incremental Build of configuration Debug for project ex2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex2.o" "..\\src\\ex2.c" 
..\src\ex2.c: In function 'main':
..\src\ex2.c:9:9: warning: call to 'gets' declared with attribute warning: Using gets() is always unsafe - use fgets() instead [-Wattribute-warning]
    9 |         gets(s);
      |         ^~~~~~~
gcc -o ex2.exe "src\\ex2.o" 
Info: Nothing to build for ex2
Info: Nothing to build for ex2
Info: Nothing to build for ex2
09:27:46 **** Incremental Build of configuration Debug for project ex2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex2.o" "..\\src\\ex2.c" 
..\src\ex2.c: In function 'main':
..\src\ex2.c:9:9: warning: call to 'gets' declared with attribute warning: Using gets() is always unsafe - use fgets() instead [-Wattribute-warning]
    9 |         gets(s);
      |         ^~~~~~~
gcc -o ex2.exe "src\\ex2.o" 
C:/msys64/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/14.1.0/../../../../x86_64-w64-mingw32/bin/ld.exe: cannot open output file ex2.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Info: Nothing to build for ex1
09:27:52 **** Incremental Build of configuration Debug for project ex2 ****
Info: Internal Builder is used for build
gcc -o ex2.exe "src\\ex2.o" 
09:27:52 **** Rebuild of configuration Debug for project ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex3.o" "..\\src\\ex3.c" 
gcc -o ex3.exe "src\\ex3.o" 
09:27:57 **** Incremental Build of configuration Debug for project ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex3.o" "..\\src\\ex3.c" 
..\src\ex3.c: In function 'main':
..\src\ex3.c:11:23: error: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
   11 |         for(int i=0;i<strlen(s);i++){
      |                       ^~~~~~
..\src\ex3.c:5:1: note: include '<string.h>' or provide a declaration of 'strlen'
    4 | #include <stdlib.h>
  +++ |+#include <string.h>
    5 | 
..\src\ex3.c:11:23: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
   11 |         for(int i=0;i<strlen(s);i++){
      |                       ^~~~~~
..\src\ex3.c:11:23: note: include '<string.h>' or provide a declaration of 'strlen'
09:28:24 **** Incremental Build of configuration Debug for project ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex3.o" "..\\src\\ex3.c" 
..\src\ex3.c: In function 'main':
..\src\ex3.c:11:9: warning: call to 'gets' declared with attribute warning: Using gets() is always unsafe - use fgets() instead [-Wattribute-warning]
   11 |         gets(s);
      |         ^~~~~~~
gcc -o ex3.exe "src\\ex3.o" 
09:29:21 **** Incremental Build of configuration Debug for project ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex3.o" "..\\src\\ex3.c" 
..\src\ex3.c: In function 'main':
..\src\ex3.c:11:9: warning: call to 'gets' declared with attribute warning: Using gets() is always unsafe - use fgets() instead [-Wattribute-warning]
   11 |         gets(s);
      |         ^~~~~~~
gcc -o ex3.exe "src\\ex3.o" 
Info: Nothing to build for ex3
Info: Nothing to build for ex3
Info: Nothing to build for ex3
09:31:22 **** Incremental Build of configuration Debug for project ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex3.o" "..\\src\\ex3.c" 
..\src\ex3.c: In function 'main':
..\src\ex3.c:11:9: warning: call to 'gets' declared with attribute warning: Using gets() is always unsafe - use fgets() instead [-Wattribute-warning]
   11 |         gets(s);
      |         ^~~~~~~
gcc -o ex3.exe "src\\ex3.o" 
09:31:38 **** Incremental Build of configuration Debug for project ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ex3.o" "..\\src\\ex3.c" 
..\src\ex3.c: In function 'main':
..\src\ex3.c:11:9: warning: call to 'gets' declared with attribute warning: Using gets() is always unsafe - use fgets() instead [-Wattribute-warning]
   11 |         gets(s);
      |         ^~~~~~~
gcc -o ex3.exe "src\\ex3.o" 
